# python-shader-app

./: .gitignore  .gitmodules  README.md  batch.py  requirements.txt  shader_app.py  shader_app.ui  shader_app_render_examples.sh  shader_app_utils.py
misc/bvh/: CMakeLists.txt  README.md  example.yaml
misc/bvh/data/: .gitignore  README.md  octahedron.ply
misc/bvh/data/gltf/DamagedHelmet/: .gitignore
misc/bvh/src/: ex00_test.cpp  ex01_benchmark.cpp  ex02_renderer_v2.cpp  ex03_test.cpp  ex04_exporter.cpp
misc/bvh/src/utils/: bvh.hpp  common.hpp  format.hpp  geometry.hpp  misc.hpp  ply.hpp  renderer.hpp  renderer_v2.hpp
misc/font/: .gitignore  CMakeLists.txt  README.md  make_font_macro.py  solve_tangent.py
misc/font/src/: ex00_font_info.cpp  ex00_font_info.py  ex01_stbtt.py  ex02_metrics_and_shape.py  stb_impl.cpp  stbtt.py
shaders/: common_v0.glsl  ex00_checker.glsl  ex01_smooth_interpolation.glsl  ex02_siphash.glsl  ex03_fract_sin_hash.glsl  ex04_gradient_interpolation.glsl  ex05_2d_noise_isolines.glsl  ex08_2d_anti_aliasing.glsl  ex09_2d_view_transform.glsl  ex11_signed_circumcircle.glsl  ex13_2d_section_torus.glsl  ex14_2d_section_tori.glsl  ex15_knot_trochoid.glsl  ex17_raymarch_sdf.glsl  ex18_mouse_interaction.glsl  ex20_multipass_test_sierpinski.glsl  ex21_shading.glsl  ex22_fractal_noise.glsl  ex23_material_encoding.glsl  ex24_color.glsl  ex25_raymarch_sdf_modifier.glsl  ex26_texture_sampling.glsl  ex27_point_group.glsl  ex28_knot_trochoid_3d.glsl  ex29_sampler_option_test.glsl  ex30_image_file_test.glsl  ex31_environment_map.glsl  ex32_font.glsl  ex33_2d_isolines.glsl  ex34_font_3d.glsl  ex35_raymarch_shadow.glsl  (+75 more)
(+77 files in other folders)
